sorted out navbar issue whereI had an extra menu item to fill the gap and replaced it with background colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     background-color: #000000;
 }
 
+.navbar-bg-color {
+    background-color: #520000;
+}
+
+
 .ui-menu-color-home {
     background-color: #520000;
 }
@@ -80,6 +85,7 @@ header {
 .menuitem:hover {
     background: red;
 }
+
 
 
 .menuitem a {
